# persim

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  RELEASE.txt  pyproject.toml  setup.py
.github/workflows/: build_and_deploy.yml  python-app.yml  python-test.yml
demo/: landscape_demo.py
docs/: .gitignore  Makefile  about.rst  conf.py  index.rst  make.bat  reference.rst  requirements.txt  theme_settings.py
docs/notebooks/: Classification with persistence images.ipynb  Differentiation with Persistence Landscapes.ipynb  PersImage_update.ipynb  Persistence Images.ipynb  Persistence Landscapes and Machine Learning.ipynb  Persistence Landscapes.ipynb  Persistence barcode measure.ipynb  Persistence images.ipynb  Persistence landscapes.ipynb  distances.ipynb
docs/reference/: .#index.rst  index.rst
notebooks/: Basic Usage.ipynb  Classification with persistence images.ipynb  Explore Ripser.ipynb  Persistence Images.ipynb  distances.ipynb
notebooks/.ipynb_checkpoints/: Classification with persistence images-checkpoint.ipynb  Explore Ripser-checkpoint.ipynb  Persistence Images-checkpoint.ipynb
persim/: PersLandscape.py  PersLandscapeExact.py  PersLandscapeGrid.py  README.md  __init__.py  bottleneck.py  gromov_hausdorff.py  heat.py  images.py  images_kernels.py  images_weights.py  landscape.py  landscape_auxiliary.py  landscape_visualization.py  landscape_visualization_simple.py  pers_landscape.py  pers_landscape_approx.py  pers_landscape_aux.py  pers_landscape_exact.py  pers_landscape_transf.py  pers_landscape_transformer.py  pers_landscape_visual.py  pers_landscape_visual_simple.py  persim.py  persistent_entropy.py  pl_transformer.py  plot.py  sliced_wasserstein.py  visuals.py  wasserstein.py
persim/landscapes/: __init__.py  approximate.py  auxiliary.py  base.py  exact.py  tools.py  transformer.py  visuals.py
persim/pers_landscape/: .gitignore  Master's Code Demo (DRAFT).ipynb  Master's Code Demo.ipynb  (+18 more)
persimmon/: __init__.py  persim.py
test/: test_distances.py  test_landscapes.py  test_persim.py  test_persim_update.py  test_persistence_imager.py  test_persistent_entropy.py  test_pl.py  test_plexact.py  test_plgrid.py  test_plots.py  test_sliced.py  test_visuals.py
(+5 files in other folders)
